0.13.3.AC (PRE-RELEASE):
-----------------------
- Fixes `QueryVariableInfo` Handling
  * Now properly handled on `UEFI-Mac` units
  * The output is however not currently presented as Apple firmare does not return accurate data
- Fixes Misc Static Analysis Flags
  * Some are related to filesystem drivers; for which updated versions are created accordingly
- Improves Mac Recovery Tool Scan
  * Now skips some invalid entries such as APFS Recovery partitions
- Improves ScreenShot Feature
  * Now clears the keystroke buffer in `egScreenShot` to mitigate against stuck keys
- Improves Clean NVRAM Feature
  * Particularly regarding clearing OpenCore related NVRAM Variables
- Improves Time Bound Primed Buffer Mitigation
  * Rationalises intervention threshold
- Improves UI Element Scaling
  * Some units use a low resolution display for the boot stage that result in distorted UI
  * RefindPlus can now detect this and automatically scale UI elements down accordingly
  * Alternatively, users can use the `scale_ui` token to scale UI elements down
  * The threshold below which the display is considered `LoRez` is 1025px
  * Ensures correct icon scales are maintained on `RescanAll` calls
- Amends `SupplyNVME` and `SupplyUEFI` Features
  * No longer supplied by default but when specifically activated
  * Hence, the "Opt-Out" `decline_nvme_load` token has been replaced by an "Opt-In `supply_nvme` token
  * The "Opt-Out" `decline_uefi_emulate` token has also been replaced by an "Opt-In `supply_uefi` token
  * A previous failure to be activated when NVME support was absent has been fixed


0.13.3.AB (06 Sep 2022):
-----------------------
- Adds `PreferUGA` Feature
  * Sets RefindPlus to always use UGA for its graphics output when available
    - The default is to use GOP and to fall back on UGA when GOP is not available
  * The feature can be enabled using a new `prefer_uga` configuration token
- Adds `FollowSymlinks` Feature
  * Allows following symbolic links to loaders